A different attempt to fix the text-circle and FA icons alignment better:incomplete

--- a/styles/sass/partials/_footer.scss
+++ b/styles/sass/partials/_footer.scss
@@ -7,18 +7,59 @@ footer {
         flex-direction: row;
         flex-wrap: wrap;
         row-gap: 40px;
-        .footBox {
-            flex-basis: 50%;
-            display: flex;
-            flex-direction: row;
-            column-gap: 10px;
-            .icon-bg-color {
-                color: $accent;
-            }
-            .icon-color {
-                color: $black;
+    }
+    .footBox {
+        flex-basis: 50%;
+        display: flex;
+        flex-direction: row;
+        column-gap: 10px;
+        h3 {
+            position: relative;
+            // padding-left: 50px;
+
+            &::before {
+                // FontAwesome settings
+                font-style: normal;
+                font-variant: normal;
+                // text-rendering: auto;
+                // -webkit-font-smoothing: antialiased;
+                font-size: 2.5rem;
+                // font-family: 'Font Awesome 6 Free';
+                // Background
+                width: 40px;
+                height: 40px;
+                background-color: $accent;
+                border-radius: 50%;
+                // Align center to the circle background
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                // Left side positioning
+                position: absolute;
+                left: 0;
             }
         }
+       /*  p {
+            padding-left: 50px;
+        } */
+        .icon-bg-color {
+            color: $accent;
+        }
+        .icon-color {
+            color: $black;
+        }
+    }
+    .item-1::before {
+        content: 'f03e';
+    }
+    .item-2::before {
+        content: 'f007';
+    }
+    .item-3::before {
+        content: 'e163';
+    }
+    .item-4::before {
+        content: 'f879';
     }
     .copyright {
         background-color: $black;
