--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -9,11 +9,18 @@ header {
         display: flex;
         align-items: center;
         justify-content: flex-end;
+        position: relative;
+        .text-circle {
+            position: absolute;
+            top: 35%;
+            left: 20%;
+            max-width: 50%;
+        }
     } 
     h1 {
         font-size: 6rem;
     }
-    .text-container::before {
+   /*  .text-container::before {
         content: '';
         width: 100%;
         height: 150px;
@@ -22,7 +29,7 @@ header {
         // background-color: $white-shade;
         display: block;
         background-repeat: no-repeat;
-    }
+    } */
     .image-container {
         flex-basis: 40%;
     }
